--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@clerk/nextjs": "^6.9.6",
     "next": "15.1.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "svix": "^1.44.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
