--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.9.6",
+    "dotenv": "^16.4.7",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.2",
     "next": "15.1.3",
